...
        buttonsIsEnabled()
    }
    
    func show(quiz result: QuizResultsViewModel) {
        let message = quizPresenter.makeResultMessage()
        
        let alertId = "GameResult"
        
        let alertModel = AlertModel(title: result.title,
                                    text: message,
                                    buttonText: result.buttonText,
                                    alertId: alertId)
        { [weak self] in
...
